[gd_scene load_steps=10 format=3 uid="uid://cybbnin0tvwh0"]

[ext_resource type="Script" path="res://scripts/new_tag_dialog.gd" id="1_mqatg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2087x"]
bg_color = Color(0.105882, 0.105882, 0.145098, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0.0196078, 0.0196078, 0.0352941, 0.137255)
shadow_size = 10
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o5g4j"]
content_margin_left = 3.0
bg_color = Color(0.164706, 0.164706, 0.211765, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r3fq4"]
content_margin_left = 5.0
bg_color = Color(0.164706, 0.164706, 0.211765, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50mqd"]
content_margin_left = 5.0
bg_color = Color(0.139348, 0.139353, 0.183366, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="InputEventKey" id="InputEventKey_27jxl"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_bxlfm"]
events = [SubResource("InputEventKey_27jxl")]

[sub_resource type="InputEventKey" id="InputEventKey_bpvgu"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_kldbv"]
events = [SubResource("InputEventKey_bpvgu")]

[node name="NewTagDialog" type="Control"]
layout_mode = 3
anchor_left = -0.127642
anchor_top = -0.0542857
anchor_right = 0.128455
anchor_bottom = 0.0542857
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(157, 38)
script = ExtResource("1_mqatg")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 242.0
offset_bottom = 66.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2087x")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
layout_mode = 2
shortcut_context = NodePath("../HBoxContainer/Ok")
theme_override_styles/focus = SubResource("StyleBoxFlat_o5g4j")
theme_override_styles/normal = SubResource("StyleBoxFlat_o5g4j")
placeholder_text = "new tag name"
max_length = 30
caret_blink = true
secret_character = ""

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Ok" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_r3fq4")
theme_override_styles/hover = SubResource("StyleBoxFlat_50mqd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r3fq4")
theme_override_styles/normal = SubResource("StyleBoxFlat_r3fq4")
action_mode = 0
shortcut = SubResource("Shortcut_bxlfm")
text = "Ok"

[node name="Cancel" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_r3fq4")
theme_override_styles/hover = SubResource("StyleBoxFlat_50mqd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r3fq4")
theme_override_styles/normal = SubResource("StyleBoxFlat_r3fq4")
action_mode = 0
shortcut = SubResource("Shortcut_kldbv")
text = "Cancel
"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
